Fix hint linked text color for dark mode
Cant use orange here. let''s use white as a good contrast

--- a/app/stylesheets/alchemy/admin/forms.scss
+++ b/app/stylesheets/alchemy/admin/forms.scss
@@ -239,8 +239,7 @@ form {
     margin-left: var(--form-left-column-width);
 
     a[href] {
-      color: var(--color-grey_very_dark);
-      text-decoration: underline;
+      color: var(--hint-text-link-color);
     }
   }
 
