--- a/app/stylesheets/alchemy/themes/dark.css
+++ b/app/stylesheets/alchemy/themes/dark.css
@@ -92,6 +92,7 @@
     --hint-background-color: hsl(55deg, 20%, 25%);
     --hint-border-color: hsla(55deg, 20%, 50%, 0.5);
     --hint-text-color: hsl(55deg, 20%, 75%);
+    --hint-text-link-color: hsla(0deg, 0%, 100%, 0.85);
 
     /* Icon Buttons */
     --icon-button-linked-color: hsla(42deg, 100%, 40%, 0.75);
